--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="get_started">GET STARTED</string>
     <string name="settings">Settings</string>
     <string name="help_feedback"><![CDATA[Help & feedBack]]></string>
+    <string name="prompt_email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_your_password">forgot your password?</string>
 </resources>
